# name: TestDeriveWorkflowStates.test_define_initial_workflows[amplicon]
  <class 'dict'> {
    'aodp': 'none',
    'nuvs': 'incompatible',
    'pathoscope': 'incompatible',
  }
---
# name: TestDeriveWorkflowStates.test_define_initial_workflows[normal]
  <class 'dict'> {
    'aodp': 'incompatible',
    'nuvs': 'none',
    'pathoscope': 'none',
  }
---
# name: TestDeriveWorkflowStates.test_define_initial_workflows[other]
  <class 'dict'> {
    'aodp': 'incompatible',
    'nuvs': 'none',
    'pathoscope': 'none',
  }
---
# name: TestDeriveWorkflowStates.test_define_initial_workflows[srna]
  <class 'dict'> {
    'aodp': 'incompatible',
    'nuvs': 'none',
    'pathoscope': 'none',
  }
---
# name: test_attach_labels
  <class 'dict'> {
    'id': 'foo',
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
      <class 'dict'> {
        'color': '#955887',
        'description': 'Measure example sense peace economy.',
        'id': 2,
        'name': 'Help',
      },
    ],
    'name': 'Foo',
  }
---
# name: test_compress_sample_reads[False]
  <class 'set'> {
    'reads_1.fq.gz',
  }
---
# name: test_compress_sample_reads[False].1
  <class 'dict'> {
    '_id': 'foo',
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/download/samples/foo/reads_1.fq.gz',
        'from': <class 'dict'> {
          'id': 'M_S11_R1_001.fastq',
          'name': 'M_S11_R1_001.fastq',
          'size': 3750821789,
        },
        'name': 'reads_1.fq.gz',
        'raw': False,
        'size': 6586501,
      },
    ],
    'paired': False,
  }
---
# name: test_compress_sample_reads[True]
  <class 'set'> {
    'reads_1.fq.gz',
    'reads_2.fq.gz',
  }
---
# name: test_compress_sample_reads[True].1
  <class 'dict'> {
    '_id': 'foo',
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/download/samples/foo/reads_1.fq.gz',
        'from': <class 'dict'> {
          'id': 'M_S11_R1_001.fastq',
          'name': 'M_S11_R1_001.fastq',
          'size': 3750821789,
        },
        'name': 'reads_1.fq.gz',
        'raw': False,
        'size': 6586501,
      },
      <class 'dict'> {
        'download_url': '/download/samples/foo/reads_2.fq.gz',
        'from': <class 'dict'> {
          'id': 'M_S11_R1_001.fastq',
          'name': 'M_S11_R1_001.fastq',
          'size': 3750821789,
        },
        'name': 'reads_2.fq.gz',
        'raw': False,
        'size': 6586501,
      },
    ],
    'paired': True,
  }
---
# name: test_create_sample
  <class 'dict'> {
    'all_read': True,
    'all_write': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': '',
    'group_read': True,
    'group_write': False,
    'hold': True,
    'host': '',
    'id': 'a2oj3gfd',
    'is_legacy': False,
    'isolate': '',
    'labels': <class 'list'> [
    ],
    'library_type': '',
    'locale': '',
    'name': 'foo',
    'notes': 'test',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'id': 'bob',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: test_create_sample.1
  <class 'dict'> {
    '_id': 'a2oj3gfd',
    'all_read': True,
    'all_write': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': '',
    'group_read': True,
    'group_write': False,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'labels': <class 'list'> [
    ],
    'library_type': '',
    'locale': '',
    'name': 'foo',
    'notes': 'test',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'id': 'bob',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: test_update_is_compressed
  <class 'list'> [
    <class 'dict'> {
      '_id': 'foo',
      'files': <class 'list'> [
        <class 'dict'> {
          'name': 'reads_1.fq.gz',
        },
        <class 'dict'> {
          'name': 'reads_2.fq.gz',
        },
      ],
      'is_compressed': True,
    },
    <class 'dict'> {
      '_id': 'baz',
      'files': <class 'list'> [
        <class 'dict'> {
          'name': 'reads_1.fastq',
        },
      ],
    },
    <class 'dict'> {
      '_id': 'bar',
      'files': <class 'list'> [
        <class 'dict'> {
          'name': 'reads_1.fq.gz',
        },
      ],
      'is_compressed': True,
    },
  ]
---
